--- a/articles/machine-learning/algorithm-module-reference/toc.yml
+++ b/articles/machine-learning/algorithm-module-reference/toc.yml
@@ -106,6 +106,8 @@
       href: train-clustering-model.md
     - name: モデルのトレーニング
       href: train-model.md
+    - name: PyTorch モデルのトレーニング
+      href: train-pytorch-model.md
     - name: モデルのハイパーパラメーターの調整
       href: tune-model-hyperparameters.md
 - name: モデルのスコアリングと評価
@@ -118,6 +120,8 @@
       href: cross-validate-model.md
     - name: モデルの評価
       href: evaluate-model.md
+    - name: 画像モデルのスコア付け
+      href: score-image-model.md
     - name: モデルのスコア付け
       href: score-model.md
 - name: Python 言語
@@ -142,6 +146,20 @@
       href: preprocess-text.md
     - name: Latent Dirichlet Allocation
       href: latent-dirichlet-allocation.md
+- name: Computer Vision
+  items:
+    - name: イメージ変換の適用
+      href: apply-image-transformation.md
+    - name: イメージ ディレクトリへの変換
+      href: convert-to-image-directory.md
+    - name: イメージ変換の初期化
+      href: init-image-transformation.md
+    - name: イメージ ディレクトリの分割
+      href: split-to-image-directory.md
+    - name: DenseNet
+      href: densenet.md
+    - name: ResNet
+      href: resnet.md
 - name: 推奨
   items:
     - name: レコメンダーの評価
