--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -23,55 +23,54 @@
       href: storage-sync-files-extend-servers.md
 - name: 概念
   items:
-    - name: Azure Files のデプロイの計画
-      href: storage-files-planning.md
-    - name: Azure File Sync のデプロイの計画
-      href: storage-sync-files-planning.md
-    - name: 直接アクセスに関するネットワークの考慮事項
-      href: storage-files-networking-overview.md
-    - name: クラウドの階層化について
-      href: storage-sync-cloud-tiering.md
-    - name: データの誤削除の防止
-      href: storage-files-prevent-file-share-deletion.md
-    - name: ストレージ アカウントについて
-      href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Azure ファイル共有スナップショット
-      href: storage-snapshots-files.md
-    - name: データの冗長性
-      href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: ディザスター リカバリーとフェールオーバー
-      href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: Azure Files
+      items:
+        - name: Azure Files のデプロイの計画
+          href: storage-files-planning.md
+        - name: ID ベースの認証と承認
+          href: storage-files-active-directory-overview.md
+        - name: 直接アクセスに関するネットワークの考慮事項
+          href: storage-files-networking-overview.md
+        - name: データの誤削除の防止
+          href: storage-files-prevent-file-share-deletion.md
+        - name: 保存時の暗号化
+          href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: カスタマー マネージド キーを使用した保存時の暗号化
+          href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: ディザスター リカバリーとフェールオーバー
+          href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Azure ファイル共有スナップショット
+          href: storage-snapshots-files.md
+        - name: 開発
+          items:
+            - name: コンカレンシーの管理
+              href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 共有キー認証
+              href: /rest/api/storageservices/Authorization-for-the-Azure-Storage-Services
+            - name: Shared Access Signatures (SAS)
+              href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 監視とトラブルシューティング
+          items:
+            - name: 監視、診断、およびトラブルシューティング
+              href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: Azure Monitor のメトリック
+              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 新しいメトリックへの移行
+              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: Storage Analytics のメトリック (クラシック)
+              href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: Azure File Sync
+      items:
+        - name: Azure File Sync のデプロイの計画
+          href: storage-sync-files-planning.md
+        - name: ハイブリッド アクセスに関するネットワークの考慮事項
+          href: storage-sync-files-networking-overview.md
+        - name: クラウドの階層化について
+          href: storage-sync-cloud-tiering.md
     - name: スケーラビリティとパフォーマンスのターゲット
       href: storage-files-scale-targets.md
-    - name: ID ベースの認証と承認
-      href: storage-files-active-directory-overview.md
-    - name: Azure Storage の保存時の暗号化
-      href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-      items:
-        - name: Azure Key Vault でのカスタマー マネージド キー
-          href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: ネットワーク ルーティング設定の構成
-      href: ../common/network-routing-preference.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: コンプライアンス認証
       href: ../common/storage-compliance-offerings.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: 開発
-      items:
-        - name: コンカレンシーの管理
-          href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 共有キー認証
-          href: /rest/api/storageservices/Authorization-for-the-Azure-Storage-Services
-        - name: Shared Access Signatures (SAS)
-          href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: 監視とトラブルシューティング
-      items:
-        - name: 監視、診断、およびトラブルシューティング
-          href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Azure Monitor のメトリック
-          href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 新しいメトリックへの移行
-          href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Storage Analytics のメトリック (クラシック)
-          href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: よく寄せられる質問
       href: storage-files-faq.md
 - name: 操作方法ガイド
@@ -90,8 +89,6 @@
           href: storage-files-deployment-guide.md
         - name: Azure File Sync のデプロイ
           href: storage-sync-files-deployment-guide.md
-        - name: File Sync のプロキシとファイアウォールの設定
-          href: storage-sync-files-firewall-and-proxy.md
         - name: Premium ファイル共有を使用した SQL Server FCI
           href: ../../virtual-machines/windows/sql/virtual-machines-windows-portal-sql-create-failover-cluster-premium-file-share.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: マウントする
@@ -104,10 +101,18 @@
           href: storage-how-to-use-files-mac.md
     - name: ネットワーク
       items:
-        - name: Azure Files ネットワーク エンドポイントの構成
-          href: storage-files-networking-endpoints.md
-        - name: Azure Files の DNS 転送の構成
-          href: storage-files-networking-dns.md
+        - name: Azure Files
+          items:
+            - name: Azure Files ネットワーク エンドポイントの構成
+              href: storage-files-networking-endpoints.md
+            - name: Azure Files の DNS 転送の構成
+              href: storage-files-networking-dns.md
+        - name: Azure File Sync
+          items:
+            - name: Azure File Sync ネットワーク エンドポイントの構成
+              href: storage-sync-files-networking-endpoints.md
+            - name: File Sync のプロキシとファイアウォールの設定
+              href: storage-sync-files-firewall-and-proxy.md
         - name: サイト間 VPN を構成する
           href: storage-files-configure-s2s-vpn.md
         - name: Windows でポイント対サイト VPN を構成する
@@ -140,7 +145,7 @@
               href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
             - name: アカウントのフェールオーバーを開始する
               href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Authenticate
+    - name: 認証
       items:
         - name: オンプレミスの認証と承認の有効化
           items:
