--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -50,8 +50,8 @@
           href: create-fslogix-profile-container.md
         - name: Azure Files と Azure AD DS を使用する
           href: create-profile-container-adds.md
-    - name: プロファイル コンテナーのファイル共有を作成する
-      href: create-file-share.md
+        - name: Azure Files と AD DS を使用する
+          href: create-file-share.md
     - name: ホスト プール設定を構成する
       items:
         - name: RDP のプロパティ
