--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -87,7 +87,7 @@
           href: concepts-pricing-tiers.md
         - name: 予約容量の前払い
           href: concept-reserved-pricing.md
-        - name: 制限
+        - name: 制限事項
           href: concepts-limits.md
     - name: データ アクセスとセキュリティ
       items:
@@ -132,6 +132,8 @@
           href: concepts-query-performance-insight.md
         - name: パフォーマンスに関する推奨事項
           href: concepts-performance-recommendations.md
+        - name: サーバー パラメーター
+          href: concepts-server-parameters.md
     - name: 開発
       items:
         - name: ドライバーとツールの互換性
