--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -13,6 +13,7 @@
     - name: プライベート エンドポイントの作成 - Azure CLI
       href: create-private-endpoint-cli.md
     - name: プライベート エンドポイントの作成 - ARM テンプレート
+      displayName: Resource Manager
       href: create-private-endpoint-template.md
     - name: プライベート リンク サービスの作成 - ポータル
       href: create-private-link-service-portal.md
@@ -21,6 +22,7 @@
     - name: プライベート リンク サービスの作成 - Azure CLI
       href: create-private-link-service-cli.md
     - name: Private Link サービスの作成 - Resource Manager テンプレート
+      displayName: Resource Manager
       href: create-private-link-service-template.md
 - name: 概念
   items:
