--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -1,60 +1,130 @@
 - name: Azure Digital Twins
   href: index.yml
 - name: 概要
-- name: クイックスタート
-  expanded: true
+  items:
+    - name: Azure Digital Twins について
+      href: overview.md
+    - name: 以前のリリースとの違い
+      href: overview-differences.md
 - name: チュートリアル
   items:
-    - name: Digital Twins によるビルディングの監視
+    - name: クライアント アプリをコーディングする
+      href: tutorial-code.md
+    - name: サンプル クライアント アプリを使用して基本事項を確認する
+      href: tutorial-command-line-app.md
+    - name: エンドツーエンドのソリューションを接続する
+      href: tutorial-end-to-end.md
 - name: 概念
   items:
-    - name: Security
+    - name: カスタム モデル
+      href: concepts-models.md
+    - name: デジタル ツインとツイン グラフ
+      href: concepts-twins-graph.md
+    - name: クエリ言語
+      href: concepts-query-language.md
+    - name: 他のサービスとの統合
+      href: concepts-integration.md
+    - name: イベント ルート
+      href: concepts-route-events.md
+    - name: Azure Digital Twins ソリューションのセキュリティ
+      href: concepts-security.md
 - name: 操作方法ガイド
   items:
-    - name: Digital Twins API のクエリ
+    - name: Azure Digital Twins CLI を使用する
+      href: how-to-use-cli.md
+    - name: API と SDK を使用する
+      href: how-to-use-apis-sdks.md
+    - name: AutoRest を使用してカスタム SDK を作成する
+      href: how-to-create-custom-sdks.md
+    - name: Azure Digital Twins インスタンスを作成する
+      href: how-to-set-up-instance.md
+    - name: クライアント アプリケーションを認証する
+      href: how-to-authenticate-client.md
+    - name: モデルを解析および検証する
+      href: how-to-use-parser.md
+    - name: ツイン モデルを管理する
+      href: how-to-manage-model.md
+    - name: デジタル ツインを管理する
+      href: how-to-manage-twin.md
+    - name: リレーションシップを使ってツイン グラフを管理する
+      href: how-to-manage-graph.md
+    - name: ツイン グラフにクエリを実行する
+      href: how-to-query-graph.md
+    - name: エンドポイントとルートを管理する
+      href: how-to-manage-routes.md
+    - name: イベント データを解釈する
+      href: how-to-interpret-event-data.md
+    - name: データを処理するための Azure 関数を設定する
+      href: how-to-create-azure-function.md
+    - name: IoT Hub からテレメトリを取り込む
+      href: how-to-ingest-iot-hub-data.md
 - name: リファレンス
+  items:
+    - name: Digital Twins の REST API
+      href: 'https://docs.microsoft.com/rest/api/azure-digitaltwins/'
+    - name: 'Digital Twins の .NET (C#) SDK'
+      href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/sdk/digitaltwins/Azure.DigitalTwins.Core'
+    - name: Digital Twins サービスに関する制約
+      href: reference-service-limits.md
+    - name: DTDL v2 の仕様
+      href: 'https://github.com/Azure/opendigitaltwins-dtdl/blob/master/DTDL/v2/dtdlv2.md'
+    - name: DTMI の仕様
+      href: 'https://github.com/Azure/digital-twin-model-identifier'
+    - name: Azure CLI
+      href: /cli/azure/iot
+    - name: Azure IoT CLI 拡張機能
+      href: /cli/azure/ext/azure-iot/iot?view=azure-cli-latest
+    - name: Azure Cloud Shell
+      href: 'https://shell.azure.com'
+    - name: Azure PowerShell
+      href: '/powershell/module/az.iothub#iot'
+    - name: Azure portal
+      href: 'https://portal.azure.com'
+    - name: Azure RBAC のドキュメント
+      href: /role-based-access-control/overview
 - name: リソース
   items:
-    - name: 開発者向けリソース
-      items:
-        - name: Azure Digital Twins グラフ ビューアー
-          href: 'https://github.com/Azure/azure-digital-twins-graph-viewer'
-        - name: 'C# 用 Azure Digital Twins サンプル (.NET)'
-          href: 'https://github.com/Azure-Samples/digital-twins-samples-csharp'
-        - name: Azure Digital Twins の REST API
-          href: 'https://docs.westcentralus.azuresmartspaces.net/management/swagger'
+    - name: VS Code 用の DTDL 拡張機能
+      href: 'https://marketplace.visualstudio.com/items?itemName=vsciot-vscode.vscode-dtdl'
+    - name: サポート オプションとヘルプ オプション
+      href: /azure/iot-fundamentals/iot-support-help
+    - name: 顧客事例
+      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
+    - name: Channel 9 の動画
+      href: 'https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22'
+    - name: 顧客データ要求
+      href: resources-customer-data-requests.md
     - name: 価格と可用性
       items:
         - name: 価格
-          href: 'https://azure.microsoft.com/pricing/details/digital-twins/'
-        - name: 料金計算ツール
-          href: 'https://azure.microsoft.com/pricing/calculator/'
-        - name: 利用可能なリージョン
-          href: 'https://azure.microsoft.com/regions/services/'
-    - name: サポート オプションとヘルプ オプション
+          href: 'https://azure.microsoft.com/pricing/details/digital-twins'
+        - name: リージョンと可用性
+          href: 'https://azure.microsoft.com/global-infrastructure/services/?products=digital-twins'
+- name: 関連項目
+  items:
+    - name: ソリューション
       items:
-        - name: Azure のサポート オプション
-          href: 'https://azure.microsoft.com/support/options/'
-        - name: Azure IoT のサポートとヘルプのオプション
-          href: 'https://docs.microsoft.com/azure/iot-fundamentals/iot-support-help'
-        - name: Stack Overflow
-          href: 'https://stackoverflow.com/questions/tagged/azure-digital-twins'
-        - name: Microsoft Q&A 質問ページ
-          href: 'https://docs.microsoft.com/answers/topics/azure-digital-twins.html'
-        - name: Azure IoT のコード サンプル
-          href: 'https://docs.microsoft.com/samples/browse/?term=iot'
-    - name: フィードバックとフォーラム
+        - name: IoT ソリューション アクセラレータ
+          href: /azure/iot-suite
+        - name: IoT Central
+          href: /azure/iot-central/iot-support-help
+    - name: プラットフォーム サービス
       items:
-        - name: Microsoft Q&A 質問ページ
-          href: 'https://docs.microsoft.com/answers/topics/azure-digital-twins.html'
-        - name: 製品の要求と提案
-          href: 'https://feedback.azure.com/forums/916621-azure-digital-twins'
-    - name: 顧客事例
-      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
-    - name: Azure のビデオ
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=digital-twins&sort=newest'
-    - name: Channel 9 の動画
-      href: 'https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22'
-    - name: Azure IoT の更新
-      href: 'https://azure.microsoft.com/roadmap/?category=iot'
-  expanded: true
+        - name: IoT Hub
+          href: /azure/iot-hub
+        - name: IoT プラグ アンド プレイ
+          href: /azure/iot-pnp
+        - name: IoT Hub Device Provisioning Service
+          href: /azure/iot-dps
+        - name: マップ
+          href: /azure/azure-maps
+        - name: サービス SDK
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+        - name: Time Series Insights
+          href: /azure/time-series-insights
+    - name: Edge ソリューション
+      items:
+        - name: IoT Edge
+          href: /azure/iot-edge
+        - name: IoT デバイス SDK
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
