--- a/articles/azure-sql/managed-instance/index.yml
+++ b/articles/azure-sql/managed-instance/index.yml
@@ -5,19 +5,19 @@ metadata:
   title: Azure SQL Managed Instance のドキュメント
   description: Microsoft SQL Server の安定した最新バージョンに基づく、Azure 内のマネージド インスタンスである Azure SQL Managed Instance に関するドキュメントをご覧ください。
   services: sql-database
-  ms.service: sql-database
-  ms.subservice: single-database
+  ms.service: sql-managed-instance
+  ms.subservice: operations
   ms.topic: landing-page
   author: MashaMSFT
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 05/27/2020
-  ms.openlocfilehash: 967bf5461a1f4e6cf8869bcea6a0e7c74204d1a1
-  ms.sourcegitcommit: 053e5e7103ab666454faf26ed51b0dfcd7661996
+  ms.openlocfilehash: 358c6e85b7a2d6e54b72bb94c00e86f330decd19
+  ms.sourcegitcommit: 537c539344ee44b07862f317d453267f2b7b2ca6
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "84023621"
+  ms.lasthandoff: 06/11/2020
+  ms.locfileid: "84708775"
 landingContent:
 - title: Azure SQL Managed Instance
   linkLists:
