--- a/articles/cognitive-services/personalizer/index.yml
+++ b/articles/cognitive-services/personalizer/index.yml
@@ -3,7 +3,7 @@ title: Personalizer のドキュメント
 summary: Personalizer を使用すると、アプリケーションでユーザーのリアルタイムの行動から学習し、ユーザーに表示する最良のエクスペリエンスを選択できるようになるしくみを学習します。
 metadata:
   ms.topic: landing-page
-  ms.date: 05/01/2020
+  ms.date: 06/11/2020
   ms.author: nitinme
   author: nitinme
   ms.service: cognitive-services
@@ -12,12 +12,12 @@ metadata:
   title: Personalizer のドキュメント
   titleSuffix: Azure Cognitive Services
   description: Azure Personalizer は、ユーザーのリアルタイムの動作から学習し、ユーザーに表示する最良のエクスペリエンスを選択できるようにするクラウドベースの API サービスです。
-  ms.openlocfilehash: ef18921e9211bb1a3659fffc84bde922d500d0b0
-  ms.sourcegitcommit: bb0afd0df5563cc53f76a642fd8fc709e366568b
+  ms.openlocfilehash: 0c8e99ab2817cd9aaa2de60b9996b3d47b10a1ff
+  ms.sourcegitcommit: a8928136b49362448e992a297db1072ee322b7fd
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83586322"
+  ms.lasthandoff: 06/11/2020
+  ms.locfileid: "84717919"
 landingContent:
 - title: Personalizer について
   linkLists:
@@ -45,6 +45,12 @@ landingContent:
       url: concepts-features.md
     - text: 報酬の計算方法
       url: concept-rewards.md
+  - linkListType: tutorial
+    links:
+    - text: .NET Web アプリで Personalizer を使用する
+      url: tutorial-use-personalizer-web-app.md
+    - text: Azure ノートブックで Personalizer を使用する
+      url: tutorial-use-azure-notebook-generate-loop-data.md
   - linkListType: how-to-guide
     links:
     - text: Personalizer の作成および構成方法
