--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -128,6 +128,8 @@
           href: concept-data.md
         - name: データ インジェスト
           href: concept-data-ingestion.md
+        - name: データ処理
+          href: concept-optimize-data-processing.md
     - name: モデル トレーニング
       displayName: 'run config, estimator, machine learning pipeline, ml pipeline, train model'
       href: concept-train-machine-learning-model.md
