--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -15,6 +15,8 @@
       href: sdk-learning-loop.md
 - name: チュートリアル
   items:
+    - name: Web アプリの使用
+      href: tutorial-use-personalizer-web-app.md
     - name: Azure Notebook の使用
       href: tutorial-use-azure-notebook-generate-loop-data.md
       displayName: 'jupyter, notebook, python, cell, graph, chart, aggregate, model update frequency'
