--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -22,6 +22,9 @@
           href: functions-create-your-first-function-visual-studio.md
         - name: コマンド ライン
           href: functions-create-first-azure-function-azure-cli.md
+        - name: ARM テンプレート
+          displayName: Resource Manager
+          href: functions-create-first-function-resource-manager.md
     - name: ストレージへの接続
       items:
         - name: Visual Studio Code
