--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -235,7 +235,7 @@
         - name: データの読み込み
           items:
             - name: 概要
-              href: sql/data-loading-overview.md
+              href: ./sql-data-warehouse/design-elt-data-loading.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: ベスト プラクティス
               href: sql/data-loading-best-practices.md
             - name: 列ストア圧縮
