--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -849,11 +849,7 @@
     - name: アプリケーションの実行
       items:
         - name: Cloud Foundry
-          items:
-            - name: 概要
-              href: cloudfoundry-get-started.md
-            - name: 初めてのアプリのデプロイ
-              href: cloudfoundry-deploy-your-first-app.md
+          href: 'https://docs.microsoft.com/en-us/azure/cloudfoundry/'
         - name: Cassandra
           href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/n-tier/n-tier-cassandra?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json'
         - name: OpenShift
