--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure Digital Twins プレビューのドキュメント
-summary: Azure Digital Twins を使用して資産、環境、ビジネス システムのデジタル版を作成し、現実世界を模した次世代の IoT ソリューションを構築する方法を説明します。
+summary: Microsoft Build 2020 で発表されたとおり、Azure Digital Twins ではサービスの新規パブリック プレビュー バージョンを準備しています。 新しいサービスとその機能に関する完全なドキュメントは、間もなくこちらに掲載されます。 引き続き、下記のリンクで最初のバージョンの Azure Digital Twins に関するドキュメントにアクセスすることもできます。
 metadata:
   title: Azure Digital Twins プレビューのドキュメント - チュートリアル、API リファレンス | Microsoft Docs
   description: Azure Digital Twins を使って、人、場所、物を繋ぎ、空間インテリジェンスにより IoT ソリューションを構築します。
@@ -10,72 +10,16 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 02/12/2020
-  ms.openlocfilehash: 93bfe0db668e3aaa78e7f58b715490dfe26fbe7a
-  ms.sourcegitcommit: 1de57529ab349341447d77a0717f6ced5335074e
+  ms.openlocfilehash: c6822c319489eedf1ecdd7d1fddcd19456c35dd9
+  ms.sourcegitcommit: 24f31287b6a526e23ff5b5469113522d1ccd4467
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/09/2020
-  ms.locfileid: "84610034"
+  ms.lasthandoff: 06/12/2020
+  ms.locfileid: "84744019"
 landingContent:
-- title: Azure Digital Twins について
+- title: Azure Digital Twins、最初のバージョン
   linkLists:
-  - linkListType: overview
-    links:
-    - text: Azure Digital Twins とは
-      url: overview.md
-- title: チュートリアルを開始する
-  linkLists:
-  - linkListType: tutorial
-    links:
-    - text: クライアント アプリをコーディングする
-      url: tutorial-code.md
-  - linkListType: tutorial
-    links:
-    - text: サンプル クライアント アプリを使用して基本事項を確認する
-      url: tutorial-command-line-app.md
-  - linkListType: tutorial
-    links:
-    - text: エンドツーエンドのソリューションを接続する
-      url: tutorial-end-to-end.md
-- title: 学習する
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: カスタム モデル
-      url: concepts-models.md
-  - linkListType: concept
-    links:
-    - text: デジタル ツインとツイン グラフ
-      url: concepts-twins-graph.md
-  - linkListType: concept
-    links:
-    - text: クエリ言語
-      url: concepts-query-language.md
-- title: 開発
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Azure Digital Twins CLI を使用する
-      url: how-to-use-cli.md
-  - linkListType: how-to-guide
-    links:
-    - text: Azure Digital Twins インスタンスを作成する
-      url: how-to-set-up-instance.md
-  - linkListType: how-to-guide
-    links:
-    - text: クライアント アプリケーションを認証する
-      url: how-to-authenticate-client.md
-- title: API リファレンス
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Azure Digital Twins の API および SDK を使用する
-      url: how-to-use-apis-sdks.md
-  - linkListType: how-to-guide
-    links:
-    - text: AutoRest を使用してカスタム SDK を作成する
-      url: how-to-create-custom-sdks.md
   - linkListType: reference
     links:
-    - text: REST API
-      url: https://docs.microsoft.com/rest/api/azure-digitaltwins/
+    - text: 以前のバージョンに関するドキュメント:Azure Digital Twins
+      url: https://docs.microsoft.com/previous-versions/azure/digital-twins/about-digital-twins
