--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -86,6 +86,8 @@
           href: add-custom-domain.md
         - name: 会社のブランドを追加する
           href: customize-branding.md
+        - name: '"サインイン状態の維持" の構成'
+          href: keep-me-signed-in.md
         - name: Azure サブスクリプションを関連付ける
           href: active-directory-how-subscriptions-associated-directory.md
         - name: プライバシー情報を追加する
