--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -54,6 +54,10 @@
       href: /azure/event-hubs/authenticate-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
     - name: Azure Container Instances
       href: /azure/container-instances/container-instances-managed-identity?context=azure/active-directory/managed-identities-azure-resources/context/msi-context
+- name: 概念
+  items:
+    - name: マネージド ID と Azure VM
+      href: how-managed-identities-work-vm.md
 - name: 操作方法ガイド
   items:
     - name: VM でのマネージド ID の構成
