--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -222,12 +222,12 @@
               href: cognitive-search-create-custom-skill-example.md
             - name: 例 - Azure Form Recognizer
               href: cognitive-search-custom-skill-form.md
+            - name: 例 - Azure Machine Learning
+              href: cognitive-search-tutorial-aml-custom-skill.md
             - name: 例 - コンテナー
               href: 'https://go.microsoft.com/fwlink/?linkid=2089500'
         - name: 設計のヒント
           href: cognitive-search-concept-troubleshooting.md
-        - name: ドキュメント リンク
-          href: cognitive-search-resources-documentation.md
         - name: ナレッジ ストア
           items:
             - name: REST と Postman を使用した作成
@@ -464,6 +464,8 @@
               href: cognitive-search-skill-text-translation.md
         - name: カスタム スキル
           items:
+            - name: Azure Machine Learning (AML)
+              href: cognitive-search-aml-skill.md
             - name: カスタム Web API
               href: cognitive-search-custom-skill-web-api.md
         - name: 非推奨のスキル
@@ -481,6 +483,8 @@
       href: 'https://feedback.azure.com/forums/263029-azure-search'
     - name: コンプライアンスと認定資格
       href: 'https://aka.ms/azurecompliance'
+    - name: ドキュメントのリンク (ナレッジ マイニング)
+      href: cognitive-search-resources-documentation.md
     - name: デモ サイト
       items:
         - name: 財務ファイルのデモ
