--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: Windows Virtual Desktop とは
       href: overview.md
+    - name: 新機能
+      href: whats-new.md
     - name: Fall 2019 リリースのドキュメント
       href: ./virtual-desktop-fall-2019/tenant-setup-azure-active-directory.md
 - name: チュートリアル
@@ -82,6 +84,8 @@
       href: teams-on-wvd.md
     - name: Azure Multi-Factor Authentication を設定する
       href: set-up-mfa.md
+    - name: 自動更新を構成する
+      href: configure-automatic-updates.md
     - name: 言語パックをインストールする
       href: language-packs.md
 - name: 概念
