--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -131,6 +131,8 @@
       href: expressroute-howto-coexist-resource-manager.md
     - name: ExpressRoute Direct を構成する
       items:
+        - name: Azure portal
+          href: how-to-expressroute-direct-portal.md
         - name: Azure PowerShell
           href: expressroute-howto-erdirect.md
         - name: Azure CLI
