--- a/articles/active-directory/privileged-identity-management/TOC.yml
+++ b/articles/active-directory/privileged-identity-management/TOC.yml
@@ -107,3 +107,13 @@
               href: pim-resource-roles-perform-access-review.md
             - name: アクセス レビューを完了する
               href: pim-resource-roles-complete-access-review.md
+- name: リファレンス
+  items:
+    - name: Graph API
+      href: 'https://developer.microsoft.com/graph/docs/api-reference/v1.0/resources/azure_ad_overview'
+    - name: Azure AD CLI
+      href: 'https://docs.microsoft.com/cli/azure/ad'
+    - name: Azure AD PowerShell for Graph
+      href: 'https://docs.microsoft.com/powershell/azure/active-directory/install-adv2?view=azureadps-2.0'
+    - name: Azure AD サービスの制約
+      href: ../users-groups-roles/directory-service-limits-restrictions.md
